# interpolation

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: main.yml
interpolation/: __version__.py  interpolation.py  interpolation_2d_slice.py  interpolation_3d_line.py  interpolation_cross_sections.py  interpolation_inv_distance_per_depth.py  interpolation_utils.py
tests/: test_interpolation.py  test_interpolation_2d_slice.py  test_interpolation_3d_line.py  test_interpolation_inv_distance_per_depth.py  test_interpolation_utils.py
tests/test_input/VEILIGHEID_DIJKTRAJECTEN_PRIMAIRE_WATERKERINGEN/: VEILIGHEID_DIJKTRAJECTEN_PRIMAIRE_WATERKERINGEN.dbf  VEILIGHEID_DIJKTRAJECTEN_PRIMAIRE_WATERKERINGEN.shx  wfsrequest.txt
